# akvtaskws

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml  redis_client.py  settings.py
src/email_akv/: email_sender.py  settings.py  test_email_send.py  utils.py
src/parser/: constants.py  settings.py  task.py  utils.py
src/parser/models/: parser_response.py  task_tm.py
src/web_socket_client/: settings.py  socketClient.py  utils.py
tests/: tests_email_sender.py
web_socket_client/: utils.py
