[project]
name = "akvtaskws"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.14",
    "aioredis>=2.0.1",
    "asyncio>=3.4.3",
    "logfire>=3.9.0",
    "python-dotenv>=1.0.1",
    "websockets>=15.0.1",
]
